--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>Título 1
+					<p>Esto es una prueba</p>
+				</section>
+				<section>
+					<h1>Definiciones</h1>
+				</section>
+				<section>
+					<h1>Referencias</h1>
+				</section>
 			</div>
 		</div>
 
