--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Título 1
+				<section data-background-color="#00FF00">Título 1
 					<p>Esto es una prueba</p>
 				</section>
 				<section>
