--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 					<p>Esto es una prueba</p>
 				</section>
 				<section>
-					<h1>Definiciones</h1>
+					<h1> Definiciones </h1>
+					<section> Hola </section>
+					<section> Adios </section>
 				</section>
 				<section>
 					<h1>Referencias</h1>
