--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<div class="slides">
 				<section data-background-color="#00FF00">Título 1
 					<p>Esto es una prueba</p>
+					<img src="images/88x31.jpg" alt="licencia">
 				</section>
 				<section>
 					<h1> Definiciones </h1>
